[tool.poetry]
name = "textual_web"
version = "0.4.2"
description = "Serve Textual apps"
authors = ["Will McGugan <will@textualize.io>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
textual = { version = ">=0.13.0", extras = ["dev"] }
aiohttp = "^3.8.4"
uvloop = { version = "^0.17.0", platform = "windows" }
click = "^8.1.3"
aiohttp-jinja2 = "^1.5.1"
pydantic = "^2.1.1"
xdg = "^6.0.0"
msgpack = "^1.0.5"
importlib-metadata = ">=4.11.3"
httpx = ">=0.24.1"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
includes = "src"

[tool.poetry.scripts]
textual-web = "textual_web.cli:app"
